styled site-wide footer and found a fix for gap bug between projects and footer

--- a/src/component/app/styles.scss
+++ b/src/component/app/styles.scss
@@ -3,3 +3,7 @@
 .app-header {
   background: $color-primary;
 }
+
+.app-footer{
+  background: $color-darkgrey;
+}
