--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -6,7 +6,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-lightgrey: #F3F3F3;
 $color-grey: #888889;
-$color-darkgrey: #33363B;
+$color-darkgrey: #222222;
 $color-button: #FEC101;
 
 $pad: 0.5em;
